--- a/css/custom.css
+++ b/css/custom.css
@@ -14,6 +14,11 @@ body {
     line-height: 1.5;
     color: var(--high-contrast);
 }
+ul {
+    list-style-type: none;
+    padding: 0;
+    margin: 0;
+}
 img {
     max-width: 100%;
     height: auto;
@@ -41,9 +46,43 @@ h5 {
 }
 .small {
     font-size: 13px;
-    line-height: 1.2;
+    line-height: 1.25;
+}
+p:last-child {
+    margin-bottom: 0;
 }
 .container {
     max-width: 1280px;
     padding: 0 20px;
 }
+
+/* Header Style */
+ul.topbar-content {
+    display: flex;
+    align-items: center;
+    justify-content: end;
+    gap: 33px;
+    font-size: 13px;
+    line-height: 1.3;
+}
+ul.topbar-content * {
+    color: var(--accent-color);
+}
+ul.topbar-content a:hover {
+    color: var(--high-contrast);
+    text-shadow: 0 0 var(--high-contrast);
+}
+ul.topbar-content li {
+    position: relative;
+}
+ul.topbar-content li:not(ul.topbar-content li:last-child)::after {
+    content: '';
+    position: absolute;
+    width: 1px;
+    height: 12px;
+    display: block;
+    background: #A9B2BC;
+    right: -16px;
+    top: calc(50% - 6px);
+}
+
