--- a/css/custom.css
+++ b/css/custom.css
@@ -147,3 +147,11 @@ ul.social-link li a {
     color: var(--white);
     font-weight: 700;
 }
+.footer-right-img {
+    display: inline-block;
+    border: 4px solid var(--white);
+    border-radius: 32px;
+}
+.footer-right-img img {
+    border-radius: 32px;
+}
