--- a/css/responsive.css
+++ b/css/responsive.css
@@ -1,3 +1,8 @@
+@media screen and (max-width: 1199px) {
+    h1 {
+        font-size: 64px;
+    }
+}
 @media screen and (max-width: 991px) {
     .container {
         padding: 0 12px;
@@ -89,9 +94,18 @@
 
 }
 @media screen and (max-width: 767px) {
+    h1 {
+        font-size: 48px;
+    }
     .footer-content .large-text {
         font-size: 36px;
         margin-bottom: 48px;
+    }
+    section.hero-section {
+        padding: 40px 0;
+    }
+    .hero-img {
+        border-radius: 16px;
     }
 
 
