--- a/css/custom.css
+++ b/css/custom.css
@@ -192,6 +192,8 @@ section.hero-section {
 }
 .hero-heading {
     margin-bottom: 16px;
+    position: relative;
+    z-index: 2;
 }
 .hero-heading h1:last-child {
     background: var(--ocean-gradient);
@@ -203,17 +205,19 @@ section.hero-section h5 {
     max-width: 620px;
     position: relative;
     z-index: 2;
+    color: var(--mid-contrast);
 }
 section.featured-section {
     padding: 80px 0;
     position: relative;
-    overflow: hidden;
 }
 section.featured-section::before, section.featured-section::after {
     content: '';
     display: block;
-    width: 700px;
-    height: 700px;
+    width: 50%;
+    max-width: 700px;
+    height: 50%;
+    max-height: 700px;
     position: absolute;
     border-radius: 100%;
     background: rgba(156, 176, 196, 0.60);
@@ -275,4 +279,27 @@ ul.featured-nav > li > a.active, ul.featured-nav > li > a:hover {
 }
 .single-featured-content a:hover {
     background-position: center right 20px;
+}
+section.joining-section {
+    padding: 80px 0;
+}
+.gutter-32 {
+    --bs-gutter-x: 32px;
+    --bs-gutter-y: 24px
+}
+.single-house-img {
+    text-align: center;
+}
+.single-house-img img {
+    border-radius: 32px;
+    box-shadow: 4px 16px 64px 4px rgba(29, 64, 101, 0.10);
+}
+.joinig-content {
+    padding: 72px 0;
+    display: flex;
+    gap: 100px;
+    align-items: flex-start;
+}
+.joining-right p {
+    color: var(--mid-contrast);
 }
