--- a/css/responsive.css
+++ b/css/responsive.css
@@ -100,6 +100,12 @@
         --bs-gutter-x: 24px;
         --bs-gutter-y: 48px
     }
+    .gutter-32 {
+        --bs-gutter-x: 24px;
+    }
+    .joinig-content {
+        gap: 48px;
+    }
 
 
 
@@ -121,14 +127,20 @@
         font-size: 36px;
         margin-bottom: 48px;
     }
-    section.hero-section, section.featured-section {
-        padding: 40px 0;
+    section.hero-section, section.featured-section, section.joining-section {
+        padding: 48px 0;
     }
     .hero-img {
         border-radius: 16px;
     }
     .featured-tab {
         padding: 48px 0;
+    }
+    .joinig-content {
+        flex-direction: column;
+        text-align: center;
+        padding: 48px 0;
+        gap: 24px;
     }
 
 
