--- a/css/custom.css
+++ b/css/custom.css
@@ -81,7 +81,9 @@ p:last-child, h5:last-child {
     padding: 16px 32px;
     border: none;
 }
-
+section.wind-section {
+    padding: 80px 0;
+}
 
 /* Header Style */
 ul.topbar-content {
@@ -208,15 +210,14 @@ section.hero-section h5 {
     color: var(--mid-contrast);
 }
 section.featured-section {
-    padding: 80px 0;
     position: relative;
 }
 section.featured-section::before, section.featured-section::after {
     content: '';
     display: block;
-    width: 50%;
+    width: 60%;
     max-width: 700px;
-    height: 50%;
+    height: 60%;
     max-height: 700px;
     position: absolute;
     border-radius: 100%;
@@ -280,12 +281,9 @@ ul.featured-nav > li > a.active, ul.featured-nav > li > a:hover {
 .single-featured-content a:hover {
     background-position: center right 20px;
 }
-section.joining-section {
-    padding: 80px 0;
-}
 .gutter-32 {
     --bs-gutter-x: 32px;
-    --bs-gutter-y: 24px
+    --bs-gutter-y: 32px
 }
 .single-house-img {
     text-align: center;
@@ -301,5 +299,88 @@ section.joining-section {
     align-items: flex-start;
 }
 .joining-right p {
+    color: var(--mid-contrast);
+}
+section.about-banner-section {
+    padding: 20px 0 80px;
+}
+.about-section-container {
+    padding: 40px 0;
+    max-width: 1360px;
+    margin: 0 auto;
+    background-color: #F0F9FE;
+    border-radius: 32px;
+}
+.about-banner-content {
+    display: flex;
+    align-items: center;
+    gap: 56px;
+}
+.about-banner-content > * {
+    flex: 1;
+}
+.about-banner-img {
+    position: relative;
+}
+.about-banner-img > img {
+    border-radius: 32px;
+}
+.about-box-content {
+    position: absolute;
+    right: 0;
+    bottom: 32px;
+    padding: 40px;
+    width: 248px;
+    height: 248px;
+    text-align: center;
+    display: flex;
+    align-items: center;
+    background-color: var(--accent-color);
+    color: var(--white);
+    background-image: url(../img/about-banner-box.jpg);
+    background-size: cover;
+    background-position: center;
+    border-radius: 32px;
+}
+.about-banner-text h2 {
+    color: var(--accent-color);
+}
+.about-banner-text h5.fw-normal {
+    color: var(--mid-contrast);
+}
+
+.benefits-content h2 {
+    max-width: 900px;
+    text-align: center;
+    margin: 0 auto 56px;
+}
+.benefits-content h2 span {
+    background: var(--ocean-gradient);
+    background-clip: text;
+    -webkit-text-fill-color: transparent;
+    font-style: italic;
+}
+.single-benefit-details {
+    padding: 24px;
+    border-radius: 24px;
+    background-color: var(--white);
+    box-shadow: 4px 16px 64px 4px rgba(29, 64, 101, 0.10);
+}
+span.cognition-icon {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: 88px;
+    height: 48px;
+    background-color: var(--accent-color);
+    padding: 8px;
+    border-radius: 24px;
+    margin-bottom: 16px;
+}
+.single-benefit-details h5 {
+    color: var(--accent-color);
+    margin-bottom: 8px;
+}
+.single-benefit-details p {
     color: var(--mid-contrast);
 }
