--- a/css/custom.css
+++ b/css/custom.css
@@ -384,3 +384,48 @@ span.cognition-icon {
 .single-benefit-details p {
     color: var(--mid-contrast);
 }
+section.wide-section.wind-section {
+    padding-bottom: 0;
+}
+section.wide-section {
+    position: relative;
+    overflow: hidden;
+}
+section.wide-section::before {
+    content: url(../img/wide-section-before.jpg);
+    border-radius: 0px 32px 32px 0px;
+    overflow: hidden;
+    box-shadow: 4px 16px 64px 4px rgba(29, 64, 101, 0.10);
+    position: absolute;
+    top: 50%;
+    transform: translateY(-50%);
+    right: calc(calc(100% + 885px) / 2);
+    z-index: -1;
+}
+section.wide-section::after{
+    content: url(../img/wide-section-after.jpg);
+    border-radius: 32px 0px 0px 32px;
+    overflow: hidden;
+    box-shadow: 4px 16px 64px 4px rgba(29, 64, 101, 0.10);
+    position: absolute;
+    top: 50%;
+    transform: translateY(-50%);
+    left: calc(calc(100% + 885px) / 2);
+    z-index: -1;
+}
+.div-820 {
+    max-width: 820px;
+    margin: 0 auto;
+}
+.wide-content, .wide-img {
+    text-align: center;
+    max-width: 400px;
+    margin: 0 auto;
+}
+.wide-content img {
+    margin-bottom: 32px;
+}
+.wide-img img {
+    border-radius: 32px;
+    box-shadow: 4px 16px 64px 4px rgba(29, 64, 101, 0.10);
+}
