--- a/css/custom.css
+++ b/css/custom.css
@@ -452,3 +452,48 @@ section.text-section h3 {
     border-radius: 32px;
     box-shadow: 20px 20px 0 #DFEAF5;
 }
+.services-banner-content {
+    position: relative;
+}
+.services-banner-content > img {
+    border-radius: 32px;
+}
+.services-box {
+    position: absolute;
+    top: 24px;
+    left: 24px;
+    max-width: 390px;
+    padding: 32px;
+    border-radius: 16px;
+    background: rgba(255, 255, 255, 0.60);
+    backdrop-filter: blur(7.5px);
+}
+.services-box h5 span {
+    font-weight: 500;
+    font-style: italic;
+    background: var(--ocean-gradient);
+    background-clip: text;
+    -webkit-text-fill-color: transparent;
+}
+.services-items {
+    display: flex;
+    flex-direction: column;
+    gap: 32px;
+}
+.single-service-item p {
+    color: var(--high-contrast);
+}
+.services-items-container {
+    position: relative;
+}
+.services-items-container::after {
+    content: "";
+    display: block;
+    background: #F0F9FE;
+    width: calc(100% - 16%);
+    height: calc(100% - 21%);
+    position: absolute;
+    top: 12%;
+    left: 8%;
+    z-index: -1;
+}
