--- a/css/responsive.css
+++ b/css/responsive.css
@@ -128,6 +128,9 @@
     .wide-content img {
         margin-bottom: 24px;
     }
+    .services-items {
+        gap: 24px;
+    }
 
 
 }
@@ -175,9 +178,27 @@
     .partner-text-content .button-group {
         justify-content: center;
     }
+    .services-banner-content > img {
+        border-radius: 24px;
+    }
+    .services-box {
+        padding: 16px;
+        right: 16px;
+        left: 16px;
+        top: 16px;
+    }
+    .services-box h5 {
+        font-size: 16px;
+    }
 
 
 
+}
+@media screen and (min-width: 768px) {
+    .single-service-item {
+        padding: 32px;
+    }
+    
 }
 @media screen and (min-width: 992px) {
     nav.navbar {
