--- a/css/custom.css
+++ b/css/custom.css
@@ -441,7 +441,7 @@ section.text-section h5 {
 section.text-section h3 {
     color: var(--accent-color);
 }
-.partner-text-content h5 {
+.partner-text-content h5, .drawing-content h3 span {
     display: inline-block;
     background: var(--ocean-gradient);
     background-clip: text;
@@ -496,4 +496,42 @@ section.text-section h3 {
     top: 12%;
     left: 8%;
     z-index: -1;
+}
+.drawing-img, .drawing-content {
+    max-width: 450px;
+    margin: 0 auto;
+}
+.drawing-img {
+    position: relative;
+}
+.drawing-img img {
+    border-radius: 32px;
+    width: 100%;
+}
+.drawing-content {
+    padding: 48px 32px;
+    text-align: center;
+    border-radius: 32px;
+    background: var(--white);
+    box-shadow: 4px 16px 64px 4px rgba(29, 64, 101, 0.10);
+}
+.drawing-content h3 span {
+    display: inline;
+}
+.drawing-content-box {
+    width: 210px;
+    height: 210px;
+    padding: 24px;
+    background-color: var(--accent-color);
+    background-image: url(../img/drawing-box-bg.jpg);
+    background-size: cover;
+    background-position: center;
+    color: var(--white);
+    display: flex;
+    align-items: center;
+    text-align: center;
+    border-radius: 32px;
+    position: absolute;
+    right: 24px;
+    bottom: 0;
 }
