--- a/css/custom.css
+++ b/css/custom.css
@@ -521,4 +521,28 @@ section.text-section h3 {
     position: absolute;
     right: 24px;
     bottom: 0;
+    box-shadow:  4px 16px 64px 4px rgba(29, 64, 101, 0.10);;
+}
+.project-nav {
+    justify-content: center;
+    padding: 32px;
+}
+.pagination {
+    padding: 32px 0;
+    display: flex;
+    justify-content: center;
+    flex-wrap: wrap;
+    gap: 8px;
+}
+.pagination a {
+    padding: 7px 14px;
+    text-align: center;
+    border: 1px solid transparent;
+    border-radius: 12px;
+    color: var(--mid-contrast);
+}
+.pagination a.active, .pagination a:hover {
+    border-color: var(--accent-color);
+    color: var(--accent-color);
+    text-shadow: 0 0 var(--accent-color);
 }
