--- a/css/custom.css
+++ b/css/custom.css
@@ -623,3 +623,67 @@ section.text-section h3 {
     -webkit-box-orient: vertical;
     -webkit-line-clamp: 3;
 }
+.contact-content {
+    position: relative;
+    padding: 48px 0;
+}
+.contact-content::after {
+    content: "";
+    display: block;
+    width: calc(100% - 16%);
+    height: 100%;
+    position: absolute;
+    left: 8%;
+    top: 0;
+    background-color: #F0F9FE;
+    border-radius: 32px;
+    z-index: -1;
+}
+.contact-image img {
+    border-radius: 32px;
+}
+.contact-info {
+    display: flex;
+    flex-direction: column;
+    gap: 32px;
+}
+.single-contact-info .small {
+    display: inline-block;
+    margin-bottom: 8px;
+    color: #6B7580;
+    text-transform: uppercase;
+}
+.single-contact-info h5 {
+    word-wrap: break-word;
+}
+span.horaizontal-bar {
+    display: block;
+    border-bottom: 1px solid #A9B2BC;
+}
+.single-contact-info ul {
+    display: flex;
+    flex-direction: column;
+    gap: 16px;
+}
+.single-contact-info ul li a {
+    color: var(--accent-color);
+}
+
+/* Contact Form Code */
+.contact-form {
+    display: flex;
+    flex-direction: column;
+    gap: 16px;
+}
+.contact-form > * {
+    flex-basis: 100%;
+}
+.contact-form label .small {
+    display: inline-block;
+    padding: 8px 16px;
+}
+.contact-form label textarea {
+    height: 96px;
+}
+/* Contact Form Code */
+
