--- a/css/custom.css
+++ b/css/custom.css
@@ -429,6 +429,10 @@ section.wide-section.wind-section {
     max-width: 820px;
     margin: 0 auto;
 }
+.div-860 {
+    max-width: 860px;
+    margin: 0 auto;
+}
 .wide-content, .wide-img {
     text-align: center;
     max-width: 400px;
@@ -667,6 +671,30 @@ span.horaizontal-bar {
 }
 .single-contact-info ul li a {
     color: var(--accent-color);
+}
+.breadcrumb-menu {
+    display: flex;
+    gap: 8px;
+    flex-wrap: wrap;
+    margin-bottom: 32px;
+    color: #6B7580;
+}
+.breadcrumb-menu a {
+    font-weight: 700;
+    color: var(--accent-color);
+}
+.projects-details-content img {
+    width: 100%;
+    border-radius: 32px;
+}
+.projects-heading h2 {
+    color: var(--accent-color);
+}
+.projects-heading h5 {
+    color: var(--mid-contrast);
+}
+.project-images {
+    padding: 56px 0;
 }
 
 /* Contact Form Code */
