--- a/css/custom.css
+++ b/css/custom.css
@@ -501,9 +501,9 @@ section.text-section h3 {
     display: block;
     background: #F0F9FE;
     width: calc(100% - 16%);
-    height: calc(100% - 21%);
+    height: calc(100% - 16%);
     position: absolute;
-    top: 12%;
+    top: 9%;
     left: 8%;
     z-index: -1;
 }
@@ -715,3 +715,34 @@ span.horaizontal-bar {
 }
 /* Contact Form Code */
 
+/* Single php */
+.blog-time {
+    color: #6B7580;
+    text-transform: uppercase;
+    display: flex;
+    align-items: center;
+    gap: 16px;
+    flex-wrap: wrap;
+    justify-content: space-between;
+    margin-bottom: 32px;
+}
+.social-icon {
+    display: flex;
+    align-items: center;
+    gap: 12px;
+}
+.blog-heading img {
+    border-radius: 32px;
+    width: 100%;
+}
+.article-text {
+    padding: 64px 0;
+}
+.article-text > *:not(.article-text > *:last-child) {
+    margin-bottom: 24px;
+}
+.article-text ul {
+    list-style-type: disc;
+    padding-left: 30px;
+}
+/* Single php */
